@@ -85,6 +85,11 @@ namespace Mono.Debugging.Client
 				}
 			}
 		}
+
+		public bool SupportsFeature (DebuggerFeatures features)
+		{
+			return (OnGetSupportedFeatures () & features) == features;
+		}
 		
 		public BreakpointStore Breakpoints {
 			get {
@@ -642,6 +647,8 @@ namespace Mono.Debugging.Client
 		protected abstract ProcessInfo[] OnGetPocesses ();
 		
 		protected abstract Backtrace OnGetThreadBacktrace (int processId, int threadId);
+
+		protected abstract DebuggerFeatures OnGetSupportedFeatures ();
 		
 		protected virtual AssemblyLine[] OnDisassembleFile (string file)
 		{
