@@ -9,6 +9,7 @@ namespace Mono.Debugging.Client
 		Backtrace backtrace;
 		ProcessInfo process;
 		ThreadInfo thread;
+		ObjectValue exception;
 
 		public TargetEventArgs (TargetEventType type)
 		{
@@ -42,6 +43,15 @@ namespace Mono.Debugging.Client
 			}
 			set {
 				process = value;
+			}
+		}
+
+		public ObjectValue Exception {
+			get {
+				return exception;
+			}
+			set {
+				exception = value;
 			}
 		}
 	}
